GNOME Bugzilla – Bug 658689
Broken keyboard backlight control due to typo
Last modified: 2011-09-10 00:48:04 UTC
Created attachment 196155 [details] [review] Fix keyboard brightness control due to typo Keyboard backlight control is broken due to a typo - the code checks against the screen brightness key rather than the keyboard brightness key. Attached is a simple patch to fix this.
Thanks for the patch!