media-keys: Fix keyboard brightness

A typo made the plugin always lower the keyboard
brightness.

https://bugzilla.gnome.org/show_bug.cgi?id=658689